2.1.3/CHANGELOG.md
# Changelog

Astronomer Certified 2.1.3-4, 2022-01-19
----------------------------------------

### Security

- Fixes for [CVE-2021-45230](https://nvd.nist.gov/vuln/detail/CVE-2021-45230)
    - Require can_edit on DAG privileges to modify TaskInstances and DagRuns (#16634) ([commit](https://github.com/astronomer/airflow/commit/160904968287713c6d39984849c4e014fddd008d))
    - Remove /dagrun/create and disable edit form generated by F.A.B (#17376) ([commit](https://github.com/astronomer/airflow/commit/a1d614614bdf771d7d34de7bc3249b57919974af))
- Updated `Flask-AppBuilder` to `3.4.3` to fix [CVE-2021-41265](https://nvd.nist.gov/vuln/detail/CVE-2021-41265) ([commit](https://github.com/astronomer/ap-airflow/commit/953ec71d9228f0c6558d4cd9aa74b8ddb5dfd141))
- Updated `numpy` to `1.21.5` to fix [CVE-2021-33430](https://nvd.nist.gov/vuln/detail/CVE-2021-33430) ([commit](https://github.com/astronomer/ap-airflow/commit/953ec71d9228f0c6558d4cd9aa74b8ddb5dfd141))

### Bug Fixes

- Row lock TI query in SchedulerJob._process_executor_events (#18975) ([commit](https://github.com/astronomer/airflow/commit/1103c8201d887ce3f090cba707c5552e2d93e53a))
- Fix labels used to find queued KubeExecutor pods (#19904) ([commit](https://github.com/astronomer/airflow/commit/42bc3f1f4e4cfde1252b4ef9281a57e63c984fcd))
- Update [Astronomer FAB Security Manager](https://github.com/astronomer/astronomer-fab-securitymanager) to version [1.8.1](https://github.com/astronomer/astronomer-fab-securitymanager/releases/tag/v1.8.1)

Astronomer Certified 2.1.3-3, 2021-11-13
----------------------------------------

### Bug Fixes

- Dockerfile: Fix `CVE-2021-33503`, `CVE-2021-23214` in AC 2.1.1 ([commit](https://github.com/astronomer/ap-airflow/commit/b511b30))
- Only mark SchedulerJobs as failed, not any jobs (#19375) ([commit](https://github.com/astronomer/airflow/commit/60e80df))
- Backport bugfix: fix last run not loading ([commit](https://github.com/astronomer/airflow/commit/628ed10))

Astronomer Certified 2.1.3-2, 2021-09-24
--------------------------------------------

### Bug Fixes

- [astro] Fix istio sidecar shutdown on newer GKE ([commit](https://github.com/astronomer/airflow/commit/1883d7a06))

Astronomer Certified 2.1.3-1, 2021-08-23
----------------------------------------

User-facing CHANGELOG for AC 2.1.3+astro.1 from Airflow 2.1.3:

### Bugfixes

- [astro] Handle Istio containers with Kubernetes Executor Pod adoption (#1318) ([commit](https://github.com/astronomer/airflow/commit/26d52248b))
- [astro] [AIRFLOW-5448] Handle istio-proxy for Kubernetes Pods (#62) ([commit](https://github.com/astronomer/airflow/commit/dc8b2a999))
- Use `1!2.0.2` version of Kubernetes Provider
- Dockerfile: Use latest version of `pip`: `21.2.4`
